# DEV.to-DevGuard

./: .gitignore  Dockerfile  INTEGRATION_GUIDE.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
devguard/: __init__.py  __main__.py  config.py  database.py
devguard/api/: __init__.py  articles.py  client.py  comments.py  followers.py  users.py
devguard/dashboard/: app.py
devguard/dashboard/static/: app.js  index.html  styles.css
devguard/detection/: __init__.py  behavioral.py  content.py  engine.py  fingerprint.py  ip_intel.py  profile.py  scoring.py
devguard/modes/: __init__.py  detect.py  execute.py  learn.py
devguard/service/: __init__.py  realtime.py  scheduler.py  worker.py
fingerprint/: collector.js
tests/: conftest.py  test_api_client.py  test_detection.py  test_modes.py  test_realtime_endpoints.py
